# LuaNode

./: .gitmodules  LICENSE  README.md  common.mk
LuaNode/include/: esp_misc.h  user_config.h  user_modules.h
LuaNode/main/: app_main.c
LuaNode_Esp32/: LuaNode32_document.docx  Makefile  README.md
LuaNode_Esp32/LuaNode32/: Makefile  build.sh  coredump.txt  partitions-LuaNode.csv  sdkconfig  set_path.sh  temp.txt
LuaNode_Esp32/LuaNode32/components/lua/: CMakeLists.txt  Kconfig  component.mk  lbaselib.c  ldblib.c  lgc.c  linit.c  llex.c  lmem.c  lobject.c  lstring.c  lstrlib.c  lua.c
LuaNode_Esp32/LuaNode32/components/lua/include/: compiler.h  lauxlib.h  ldebug.h  llimits.h  lmem.h  lparser.h  lrodefs.h  lua.h  luac_cross.h  luaconf.h  lualib.h  user_modules.h
LuaNode_Esp32/LuaNode32C6/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
LuaNode_Esp32/components/: Makefile  Makefile.bak  clean.sh  gen_misc.sh  readme.txt
LuaNode_Esp32/firmware/: README.md
LuaNode_Esp32/include/: c_types.h  esp_sta.h  ets_sys.h  pin_mux_register.h  rom.h  spi_flash.h
LuaNode_Esp32/ld/: pro.map1.1.ld
LuaNode_Esp32/tools/: addrsource
LuaNode_Esp8266/: CMakeLists.txt  Makefile  sdkconfig  sdkconfig.old
LuaNode_Esp8266/components/: Makefile  clean.sh  gen_misc.sh
LuaNode_Esp8266/ld/: eagle.app.v6.common.ld  eagle.app.v6.ld  eagle.rom.addr.v6.ld
LuaNode_Stm32L4/: README.md
LuaNode_W800/: Makefile  README.md
LuaNode_W800/app/: Makefile
core/: app_main.c  newlib_syscalls.c  sdk_compat.c
include/: rom.h  user_config.h  user_modules.h
ld/: rom.ld
lwip/: component.mk
(+1661 files in other folders)
